--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,13 +29,14 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      border-radius: 0 0 18px 18px;
-      box-shadow: 0 4px 16px -6px rgba(16, 34, 74, .14);
+      /* border-radius: 0 0 5px 5px; */
+      box-shadow: 0 4px 10px -6px rgb(2 10 27 / 91%);
     }
 
+
     .logo {
-      height: 9.5vh;
-      border-radius: 8px;
+      height: 7.5vh;
+      border-radius: 5px;
       background: #fff;
       box-shadow: 0 2px 8px rgba(16, 34, 74, .10);
       border: 2px solid #2563eb;
@@ -50,14 +51,14 @@
 
     .header-center h1 {
       margin: 0;
-      font-size: 4.5vh;
+      font-size: 3.5vh;
       font-weight: 700;
       text-shadow: 1px 1px 2px #00000077;
     }
 
     .header-center h2 {
       margin: 0;
-      font-size: 4vh;
+      font-size: 3vh;
       font-weight: 500;
       text-shadow: 1px 1px 2px #00000055;
     }
