--- a/frontend/index.html
+++ b/frontend/index.html
@@ -135,7 +135,7 @@
       overflow: hidden;
       word-break: break-word;
       box-sizing: border-box;
-      padding-bottom: 0.5vh;
+      padding: 0vh 0.5vh;
     }
 
     .card img {
