--- a/frontend/index.html
+++ b/frontend/index.html
@@ -127,7 +127,7 @@
       overflow: hidden;
       word-break: break-word;
       box-sizing: border-box;
-      padding: 0vh 0.5vh;
+      padding: 1em 0.5vh;
     }
 
     .card img {
@@ -314,6 +314,23 @@
       white-space: nowrap;
       will-change: transform;
     }
+
+    #adProgress {
+      position: fixed;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 4px;
+      background: #1e3a8a;
+      z-index: 10001;
+    }
+
+    #adProgressBar {
+      height: 100%;
+      background: #2563eb;
+      width: 0;
+      transition: width 0.2s;
+    }
   </style>
 </head>
 
@@ -340,6 +357,10 @@
   <footer id="marqueeFooter" style="position:fixed; left:0; bottom:0; width:100vw; height:2.5em; background:#1e293b; color:#fff; font-size:1.3em; z-index:10000; overflow:hidden; display:flex; align-items:center;">
     <div id="marqueeText" style="white-space:nowrap; will-change:transform;"></div>
   </footer>
+
+  <div id="adProgress">
+    <div id="adProgressBar"></div>
+  </div>
 
   <script>
     const STATUS_MAP = {
@@ -466,6 +487,11 @@
         if (ads.length) runAdSequence();
       });
 
+    function updateAdProgress(duration, elapsed = 0) {
+      const bar = document.getElementById("adProgressBar");
+      bar.style.width = ((elapsed / duration) * 100) + "%";
+    }
+
     function runAdSequence() {
       let totalAdTime = 0;
       let current = 0;
@@ -497,12 +523,20 @@
             adImage.style.display = "block";
             setAdStretch(adImage);
           };
-          totalAdTime += 20000;
+          let elapsed = 0;
+          const duration = 20000;
+          updateAdProgress(duration, 0);
+          const progressInterval = setInterval(() => {
+            elapsed += 200;
+            updateAdProgress(duration, elapsed);
+            if (elapsed >= duration) clearInterval(progressInterval);
+          }, 200);
           setTimeout(() => {
             adImage.style.display = "none";
+            updateAdProgress(duration, duration);
             current++;
             showNextAd();
-          }, 20000);
+          }, duration);
         } else if (ad.type === "video") {
           adVideo.src = "https://faculty-status-backend.onrender.com" + ad.src;
           adVideo.load();
@@ -511,9 +545,14 @@
             setAdStretch(adVideo);
             adVideo.play();
             const duration = adVideo.duration * 1000;
-            totalAdTime += duration;
+            updateAdProgress(duration, 0);
+            const progressInterval = setInterval(() => {
+              updateAdProgress(duration, adVideo.currentTime * 1000);
+              if (adVideo.paused || adVideo.ended) clearInterval(progressInterval);
+            }, 200);
             adVideo.onended = () => {
               adVideo.style.display = "none";
+              updateAdProgress(duration, duration);
               current++;
               showNextAd();
             };
@@ -562,6 +601,16 @@
     setInterval(loadFaculty, 3000);
     updateClock();
     setInterval(updateClock, 1000);
+
+    function adjustFooterSpace() {
+      const footer = document.getElementById("marqueeFooter");
+      const grid = document.getElementById("grid");
+      if (footer && grid) {
+        grid.style.paddingBottom = footer.offsetHeight + "px";
+      }
+    }
+    window.addEventListener("resize", adjustFooterSpace);
+    window.addEventListener("DOMContentLoaded", adjustFooterSpace);
   </script>
 </body>
 
