--- a/frontend/index.html
+++ b/frontend/index.html
@@ -107,10 +107,8 @@
       gap: 1vh;
       padding: 1vh 2vw;
       box-sizing: border-box;
-      height: calc(100vh - 90px);
-      /* adjust header height as needed */
+      /* Height set dynamically by JS */
       overflow: visible;
-      /* If you use grid-template-rows/columns, ensure it fits 961x541 */
     }
 
     .card {
@@ -127,7 +125,8 @@
       overflow: hidden;
       word-break: break-word;
       box-sizing: border-box;
-      padding: 1em 0.5vh;
+      padding: 1.2vh 0.5vh;
+      /* Increased vertical padding */
     }
 
     .card img {
@@ -300,14 +299,16 @@
       left: 0;
       bottom: 0;
       width: 100vw;
-      height: 2.5em;
+      height: 2em;
       background: #1e293b;
       color: #fff;
-      font-size: 1.3em;
+      font-size: 1em;
       z-index: 10000;
       overflow: hidden;
       display: flex;
       align-items: center;
+      padding-left: 2vw;
+      font-family: 'Orbitron', 'Inter', Arial, sans-serif;
     }
 
     #marqueeText {
@@ -316,11 +317,11 @@
     }
 
     #adProgress {
-      position: fixed;
+      position: absolute;
       left: 0;
-      top: 0;
+      bottom: 0;
       width: 100%;
-      height: 4px;
+      height: 6px;
       background: #1e3a8a;
       z-index: 10001;
     }
@@ -351,16 +352,15 @@
   <div id="adOverlay">
     <img id="adImage" src="" />
     <video id="adVideo" autoplay muted></video>
+    <div id="adProgress">
+      <div id="adProgressBar"></div>
+    </div>
   </div>
 
   <!-- Marquee Footer -->
-  <footer id="marqueeFooter" style="position:fixed; left:0; bottom:0; width:100vw; height:2.5em; background:#1e293b; color:#fff; font-size:1.3em; z-index:10000; overflow:hidden; display:flex; align-items:center;">
-    <div id="marqueeText" style="white-space:nowrap; will-change:transform;"></div>
+  <footer id="marqueeFooter">
+    <div id="marqueeText"></div>
   </footer>
-
-  <div id="adProgress">
-    <div id="adProgressBar"></div>
-  </div>
 
   <script>
     const STATUS_MAP = {
@@ -394,7 +394,6 @@
               room = statusObj.room ?? null;
               batch = statusObj.batch ?? null;
             }
-            console.log(f.name, statusStr, room, batch);
             let extraInfo = "";
             if (statusStr === "in_class" && room && batch) {
               extraInfo = `<small class="text-gray">with ${batch} at ${room}</small>`;
@@ -432,16 +431,20 @@
     let ads = [];
     let nextAdTimeout = null;
 
-    // Helper: Adjust overlay position and size based on header
-    function adjustOverlayPosition() {
+    // Helper: Adjust overlay position and grid height based on header/footer
+    function adjustLayout() {
       const header = document.querySelector("header");
+      const footer = document.getElementById("marqueeFooter");
+      const grid = document.getElementById("grid");
       const overlay = document.getElementById("adOverlay");
       const headerHeight = header.offsetHeight;
+      const footerHeight = footer.offsetHeight;
+      grid.style.height = `calc(100vh - ${headerHeight}px - ${footerHeight}px)`;
       overlay.style.top = headerHeight + "px";
-      overlay.style.height = `calc(100vh - ${headerHeight}px)`;
+      overlay.style.height = `calc(100vh - ${headerHeight}px - ${footerHeight}px)`;
     }
-    window.addEventListener("resize", adjustOverlayPosition);
-    window.addEventListener("DOMContentLoaded", adjustOverlayPosition);
+    window.addEventListener("resize", adjustLayout);
+    window.addEventListener("DOMContentLoaded", adjustLayout);
 
     // Helper: Show/hide overlay with fade
     function showOverlay() {
@@ -458,11 +461,8 @@
     // Helper: Stretch ad to fill horizontally or vertically, keeping aspect ratio
     function setAdStretch(mediaEl) {
       const overlay = document.getElementById("adOverlay");
-      // Remove previous stretch classes
       overlay.classList.remove("stretch-horizontal", "stretch-vertical");
-      // Get overlay size
       const overlayRect = overlay.getBoundingClientRect();
-      // Get media natural size
       let mediaWidth, mediaHeight;
       if (mediaEl.tagName === "IMG") {
         mediaWidth = mediaEl.naturalWidth;
@@ -471,7 +471,6 @@
         mediaWidth = mediaEl.videoWidth;
         mediaHeight = mediaEl.videoHeight;
       }
-      // Decide stretch direction
       if ((mediaWidth / mediaHeight) > (overlayRect.width / overlayRect.height)) {
         overlay.classList.add("stretch-horizontal");
       } else {
@@ -537,6 +536,7 @@
             current++;
             showNextAd();
           }, duration);
+          totalAdTime += duration;
         } else if (ad.type === "video") {
           adVideo.src = "https://faculty-status-backend.onrender.com" + ad.src;
           adVideo.load();
@@ -556,7 +556,6 @@
               current++;
               showNextAd();
             };
-            // Fallback in case video doesn't end
             setTimeout(() => {
               if (!adVideo.paused) {
                 adVideo.pause();
@@ -565,6 +564,7 @@
                 showNextAd();
               }
             }, duration);
+            totalAdTime += duration;
           };
         }
       }
@@ -584,13 +584,17 @@
 
     function animateMarquee() {
       const marquee = document.getElementById("marqueeText");
-      marquee.style.transform = "translateX(100vw)";
-      marquee.style.transition = "none";
-      setTimeout(() => {
-        const textWidth = marquee.offsetWidth;
-        marquee.style.transition = `transform ${15 + textWidth/100}s linear`;
-        marquee.style.transform = `translateX(-${textWidth + window.innerWidth}px)`;
-      }, 100); // allow DOM update
+      function loop() {
+        marquee.style.transition = "none";
+        marquee.style.transform = "translateX(100vw)";
+        setTimeout(() => {
+          const textWidth = marquee.offsetWidth;
+          marquee.style.transition = `transform ${15 + textWidth/100}s linear`;
+          marquee.style.transform = `translateX(-${textWidth + window.innerWidth}px)`;
+        }, 100);
+        marquee.addEventListener('transitionend', loop, { once: true });
+      }
+      loop();
     }
 
     // Reload marquee every 5 minutes in case backend changes
@@ -602,15 +606,8 @@
     updateClock();
     setInterval(updateClock, 1000);
 
-    function adjustFooterSpace() {
-      const footer = document.getElementById("marqueeFooter");
-      const grid = document.getElementById("grid");
-      if (footer && grid) {
-        grid.style.paddingBottom = footer.offsetHeight + "px";
-      }
-    }
-    window.addEventListener("resize", adjustFooterSpace);
-    window.addEventListener("DOMContentLoaded", adjustFooterSpace);
+    window.addEventListener("resize", adjustLayout);
+    window.addEventListener("DOMContentLoaded", adjustLayout);
   </script>
 </body>
 
