--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Faculty Whereabouts</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/digital-7" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     body {
@@ -66,18 +67,19 @@
       color: #38bdf8;
       border-radius: 10px;
       padding: 0.3em 0.8em;
-      width: 9.5em;
+      width: 10em;
       text-align: center;
       letter-spacing: 0.18em;
       box-shadow: 0 0 16px #38bdf888, 0 0 4px #2563eb;
-      font-size: 1.7em;
+      font-size: 2.2em;
       display: flex;
       align-items: center;
       justify-content: center;
       border: 2px solid #38bdf8;
-      font-family: 'Orbitron', 'Inter', 'Segoe UI', monospace, Arial, sans-serif;
+      font-family: 'Digital-7', 'Segment7', monospace, Arial, sans-serif;
       font-variant-numeric: tabular-nums;
       white-space: nowrap;
+      text-shadow: 0 0 8px #38bdf8, 0 0 2px #2563eb;
     }
 
     .clock-group {
@@ -95,6 +97,7 @@
       color: #60a5fa;
       letter-spacing: 0.2em;
       vertical-align: middle;
+      font-family: 'Digital-7', 'Segment7', monospace, Arial, sans-serif;
     }
 
     .grid {
