--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,25 +61,18 @@
     #clock {
       position: fixed;
       right: 2vw;
-      bottom: 13vh;
+      bottom: 10vh;
       z-index: 1000;
       background: #111827;
-      color: #38bdf8;
       border-radius: 10px;
-      padding: 0.3em 0.8em;
-      width: 11.5em;
-      text-align: center;
-      letter-spacing: 0.18em;
-      box-shadow: 0 0 16px #38bdf888, 0 0 4px #2563eb;
-      font-size: 2.2em;
+      padding: 0.2em 0.5em;
       display: flex;
       align-items: center;
       justify-content: center;
       border: 2px solid #38bdf8;
-      font-family: 'Digital-7', 'Segment7', monospace, Arial, sans-serif;
-      font-variant-numeric: tabular-nums;
+      box-shadow: 0 0 16px #38bdf888, 0 0 4px #2563eb;
       white-space: nowrap;
-      text-shadow: 0 0 8px #38bdf8, 0 0 2px #2563eb;
+      gap: 0.1em;
     }
 
     .clock-group {
@@ -92,12 +85,12 @@
       display: inline-block;
       width: 2.5em;
       text-align: left;
-      font-size: 0.5em;
-      margin-left: 0.2em;
+      font-size: 0.7em;
+      margin-left: 0.3em;
       color: #60a5fa;
       letter-spacing: 0.2em;
       vertical-align: middle;
-      font-family: 'Digital-7', 'Segment7', monospace, Arial, sans-serif;
+      font-family: 'Orbitron', 'Inter', 'Segoe UI', monospace, Arial, sans-serif;
     }
 
     .grid {
@@ -343,9 +336,175 @@
 
     .seg {
       fill: #222;
-      stroke: #2563eb;
-      stroke-width: 2;
-      rx: 2;
+      transition: fill 0.2s;
+    }
+
+    .seg-a {
+      y: 2;
+    }
+
+    .seg-b {
+      x: 32;
+      y: 8;
+      width: 6;
+      height: 24;
+    }
+
+    .seg-c {
+      x: 32;
+      y: 38;
+      width: 6;
+      height: 24;
+    }
+
+    .seg-d {
+      y: 62;
+    }
+
+    .seg-e {
+      x: 2;
+      y: 38;
+      width: 6;
+      height: 24;
+    }
+
+    .seg-f {
+      x: 2;
+      y: 8;
+      width: 6;
+      height: 24;
+    }
+
+    .seg-g {
+      y: 34;
+    }
+
+    .seven-segment .seg.lit {
+      fill: #38bdf8;
+      filter: drop-shadow(0 0 6px #38bdf8);
+    }
+
+    .digit-bg {
+      background: #222;
+      border-radius: 6px;
+      margin: 0 2px;
+      display: inline-block;
+      box-shadow: 0 0 8px #222;
+    }
+
+    .colon {
+      margin: 0 1px;
+    }
+
+    @keyframes slide {
+      from {
+        transform: translateX(100%);
+      }
+
+      to {
+        transform: translateX(-100%);
+      }
+    }
+
+    /* --- Ad Overlay Styles --- */
+    #adOverlay {
+      position: fixed;
+      left: 0;
+      /* top and height set dynamically by JS */
+      width: 100vw;
+      background: rgba(0, 0, 0, 0.85);
+      z-index: 9999;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.7s;
+    }
+
+    #adOverlay.active {
+      opacity: 1;
+      pointer-events: auto;
+    }
+
+    #adOverlay img,
+    #adOverlay video {
+      display: none;
+      background: #000;
+      max-width: 100vw;
+      max-height: 100vh;
+      width: auto;
+      height: auto;
+      object-fit: contain;
+    }
+
+    #adOverlay.stretch-horizontal img,
+    #adOverlay.stretch-horizontal video {
+      width: 100%;
+      height: auto;
+      max-height: 100%;
+      object-fit: contain;
+    }
+
+    #adOverlay.stretch-vertical img,
+    #adOverlay.stretch-vertical video {
+      height: 100%;
+      width: auto;
+      max-width: 100%;
+      object-fit: contain;
+    }
+
+    /* --- Marquee Footer Styles --- */
+    #marqueeFooter {
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      width: 100vw;
+      height: 2em;
+      background: #1e293b;
+      color: #fff;
+      font-size: 1em;
+      z-index: 10000;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      padding-left: 2vw;
+      font-family: 'Orbitron', 'Inter', Arial, sans-serif;
+    }
+
+    #marqueeText {
+      white-space: nowrap;
+      will-change: transform;
+    }
+
+    #adProgress {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 6px;
+      background: #1e3a8a;
+      z-index: 10001;
+    }
+
+    #adProgressBar {
+      height: 100%;
+      background: #2563eb;
+      width: 0;
+      transition: width 0.2s;
+    }
+
+    /* 7-segment digit SVG component */
+    .seven-segment {
+      width: 40px;
+      height: 70px;
+      display: inline-block;
+      vertical-align: middle;
+    }
+
+    .seg {
+      fill: #222;
+      transition: fill 0.2s;
     }
 
     .seg-a {
@@ -490,26 +649,56 @@
     function renderDigit(digit) {
       const segs = SEGMENTS[digit] || [];
       return `
-    <svg width="40" height="70" viewBox="0 0 40 70" class="seven-segment">
-      <rect class="seg seg-a${segs.includes('a') ? ' lit' : ''}" x="8" y="2" width="24" height="6" rx="2"/>
-      <rect class="seg seg-b${segs.includes('b') ? ' lit' : ''}" x="32" y="8" width="6" height="24" rx="2"/>
-      <rect class="seg seg-c${segs.includes('c') ? ' lit' : ''}" x="32" y="38" width="6" height="24" rx="2"/>
-      <rect class="seg seg-d${segs.includes('d') ? ' lit' : ''}" x="8" y="62" width="24" height="6" rx="2"/>
-      <rect class="seg seg-e${segs.includes('e') ? ' lit' : ''}" x="2" y="38" width="6" height="24" rx="2"/>
-      <rect class="seg seg-f${segs.includes('f') ? ' lit' : ''}" x="2" y="8" width="6" height="24" rx="2"/>
-      <rect class="seg seg-g${segs.includes('g') ? ' lit' : ''}" x="8" y="34" width="24" height="6" rx="2"/>
-    </svg>
+    <span class="digit-bg">
+      <svg width="28" height="48" viewBox="0 0 28 48" class="seven-segment">
+        <rect class="seg seg-a${segs.includes('a') ? ' lit' : ''}" x="6" y="1" width="16" height="4" rx="1.5"/>
+        <rect class="seg seg-b${segs.includes('b') ? ' lit' : ''}" x="22" y="5" width="4" height="16" rx="1.5"/>
+        <rect class="seg seg-c${segs.includes('c') ? ' lit' : ''}" x="22" y="27" width="4" height="16" rx="1.5"/>
+        <rect class="seg seg-d${segs.includes('d') ? ' lit' : ''}" x="6" y="43" width="16" height="4" rx="1.5"/>
+        <rect class="seg seg-e${segs.includes('e') ? ' lit' : ''}" x="1" y="27" width="4" height="16" rx="1.5"/>
+        <rect class="seg seg-f${segs.includes('f') ? ' lit' : ''}" x="1" y="5" width="4" height="16" rx="1.5"/>
+        <rect class="seg seg-g${segs.includes('g') ? ' lit' : ''}" x="6" y="23" width="16" height="4" rx="1.5"/>
+      </svg>
+    </span>
   `;
     }
 
-    function renderClock(h, m, s) {
+    function renderColon() {
+      return `
+    <span class="digit-bg colon">
+      <svg width="10" height="48" viewBox="0 0 10 48">
+        <circle cx="5" cy="14" r="2.5" fill="#38bdf8" filter="url(#glow)"/>
+        <circle cx="5" cy="34" r="2.5" fill="#38bdf8" filter="url(#glow)"/>
+        <defs>
+          <filter id="glow" x="-5" y="-5" width="20" height="20">
+            <feGaussianBlur stdDeviation="2" result="coloredBlur"/>
+            <feMerge>
+              <feMergeNode in="coloredBlur"/>
+              <feMergeNode in="SourceGraphic"/>
+            </feMerge>
+          </filter>
+        </defs>
+      </svg>
+    </span>
+  `;
+    }
+
+    function renderClock(h, m, s, ampm) {
       const digits = [
         ...String(h).padStart(2, '0'),
         ...String(m).padStart(2, '0'),
         ...String(s).padStart(2, '0')
       ];
-      const html = digits.map(renderDigit).join('') +
-        `<span style="font-size:1.2em;vertical-align:top;color:#60a5fa;margin-left:0.5em;">${h >= 12 ? 'PM' : 'AM'}</span>`;
+      const html =
+        renderDigit(digits[0]) +
+        renderDigit(digits[1]) +
+        renderColon() +
+        renderDigit(digits[2]) +
+        renderDigit(digits[3]) +
+        renderColon() +
+        renderDigit(digits[4]) +
+        renderDigit(digits[5]) +
+        `<span class="ampm">${ampm}</span>`;
       document.getElementById("clock").innerHTML = html;
     }
 
@@ -518,16 +707,17 @@
       let h = now.getHours();
       let m = now.getMinutes();
       let s = now.getSeconds();
+      const ampm = h >= 12 ? 'PM' : 'AM';
       h = h % 12;
       h = h ? h : 12;
-      renderClock(h, m, s);
+      renderClock(h, m, s, ampm);
     }
-    setInterval(updateClock, 1000);
-    // --- Ad Overlay Logic ---
-    let ads = [];
-    let nextAdTimeout = null;
 
-    // Helper: Adjust overlay position and grid height based on header/footer
+    document.addEventListener("DOMContentLoaded", function () {
+      updateClock();
+      setInterval(updateClock, 1000);
+    });
+
     function adjustLayout() {
       const header = document.querySelector("header");
       const footer = document.getElementById("marqueeFooter");
