--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Faculty Whereabouts</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.cdnfonts.com/css/digital-7" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     body {
@@ -66,6 +65,8 @@
       background: #111827;
       border-radius: 10px;
       padding: 0.2em 0.5em;
+      width: 270px;
+      overflow: hidden;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -73,24 +74,6 @@
       box-shadow: 0 0 16px #38bdf888, 0 0 4px #2563eb;
       white-space: nowrap;
       gap: 0.1em;
-    }
-
-    .clock-group {
-      display: inline-block;
-      width: 2em;
-      text-align: center;
-    }
-
-    #clock .ampm {
-      display: inline-block;
-      width: 2.5em;
-      text-align: left;
-      font-size: 0.7em;
-      margin-left: 0.3em;
-      color: #60a5fa;
-      letter-spacing: 0.2em;
-      vertical-align: middle;
-      font-family: 'Orbitron', 'Inter', 'Segoe UI', monospace, Arial, sans-serif;
     }
 
     .grid {
@@ -328,8 +311,8 @@
 
     /* 7-segment digit SVG component */
     .seven-segment {
-      width: 40px;
-      height: 70px;
+      width: 24px !important;
+      height: 42px !important;
       display: inline-block;
       vertical-align: middle;
     }
@@ -377,6 +360,11 @@
 
     .seg-g {
       y: 34;
+    }
+
+    .seven-segment .seg {
+      fill: #222;
+      transition: fill 0.2s;
     }
 
     .seven-segment .seg.lit {
@@ -387,7 +375,7 @@
     .digit-bg {
       background: #222;
       border-radius: 6px;
-      margin: 0 2px;
+      margin: 0 1px;
       display: inline-block;
       box-shadow: 0 0 8px #222;
     }
@@ -396,160 +384,15 @@
       margin: 0 1px;
     }
 
-    @keyframes slide {
-      from {
-        transform: translateX(100%);
-      }
-
-      to {
-        transform: translateX(-100%);
-      }
-    }
-
-    /* --- Ad Overlay Styles --- */
-    #adOverlay {
-      position: fixed;
-      left: 0;
-      /* top and height set dynamically by JS */
-      width: 100vw;
-      background: rgba(0, 0, 0, 0.85);
-      z-index: 9999;
-      justify-content: center;
-      align-items: center;
-      display: flex;
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.7s;
-    }
-
-    #adOverlay.active {
-      opacity: 1;
-      pointer-events: auto;
-    }
-
-    #adOverlay img,
-    #adOverlay video {
-      display: none;
-      background: #000;
-      max-width: 100vw;
-      max-height: 100vh;
-      width: auto;
-      height: auto;
-      object-fit: contain;
-    }
-
-    #adOverlay.stretch-horizontal img,
-    #adOverlay.stretch-horizontal video {
-      width: 100%;
-      height: auto;
-      max-height: 100%;
-      object-fit: contain;
-    }
-
-    #adOverlay.stretch-vertical img,
-    #adOverlay.stretch-vertical video {
-      height: 100%;
-      width: auto;
-      max-width: 100%;
-      object-fit: contain;
-    }
-
-    /* --- Marquee Footer Styles --- */
-    #marqueeFooter {
-      position: fixed;
-      left: 0;
-      bottom: 0;
-      width: 100vw;
-      height: 2em;
-      background: #1e293b;
-      color: #fff;
-      font-size: 1em;
-      z-index: 10000;
-      overflow: hidden;
-      display: flex;
-      align-items: center;
-      padding-left: 2vw;
-      font-family: 'Orbitron', 'Inter', Arial, sans-serif;
-    }
-
-    #marqueeText {
-      white-space: nowrap;
-      will-change: transform;
-    }
-
-    #adProgress {
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      height: 6px;
-      background: #1e3a8a;
-      z-index: 10001;
-    }
-
-    #adProgressBar {
-      height: 100%;
-      background: #2563eb;
-      width: 0;
-      transition: width 0.2s;
-    }
-
-    /* 7-segment digit SVG component */
-    .seven-segment {
-      width: 40px;
-      height: 70px;
+    .ampm {
       display: inline-block;
+      width: 2.5em;
+      text-align: left;
+      font-size: 0.7em;
+      margin-left: 0.3em;
+      color: #60a5fa;
+      letter-spacing: 0.2em;
       vertical-align: middle;
-    }
-
-    .seg {
-      fill: #222;
-      transition: fill 0.2s;
-    }
-
-    .seg-a {
-      y: 2;
-    }
-
-    .seg-b {
-      x: 32;
-      y: 8;
-      width: 6;
-      height: 24;
-    }
-
-    .seg-c {
-      x: 32;
-      y: 38;
-      width: 6;
-      height: 24;
-    }
-
-    .seg-d {
-      y: 62;
-    }
-
-    .seg-e {
-      x: 2;
-      y: 38;
-      width: 6;
-      height: 24;
-    }
-
-    .seg-f {
-      x: 2;
-      y: 8;
-      width: 6;
-      height: 24;
-    }
-
-    .seg-g {
-      y: 34;
-    }
-
-    .seven-segment .seg.lit {
-      fill: #38bdf8;
-      filter: drop-shadow(0 0 6px #38bdf8);
     }
   </style>
 </head>
@@ -650,7 +493,7 @@
       const segs = SEGMENTS[digit] || [];
       return `
     <span class="digit-bg">
-      <svg width="28" height="48" viewBox="0 0 28 48" class="seven-segment">
+      <svg width="24" height="42" viewBox="0 0 28 48" class="seven-segment">
         <rect class="seg seg-a${segs.includes('a') ? ' lit' : ''}" x="6" y="1" width="16" height="4" rx="1.5"/>
         <rect class="seg seg-b${segs.includes('b') ? ' lit' : ''}" x="22" y="5" width="4" height="16" rx="1.5"/>
         <rect class="seg seg-c${segs.includes('c') ? ' lit' : ''}" x="22" y="27" width="4" height="16" rx="1.5"/>
@@ -666,7 +509,7 @@
     function renderColon() {
       return `
     <span class="digit-bg colon">
-      <svg width="10" height="48" viewBox="0 0 10 48">
+      <svg width="10" height="42" viewBox="0 0 10 48">
         <circle cx="5" cy="14" r="2.5" fill="#38bdf8" filter="url(#glow)"/>
         <circle cx="5" cy="34" r="2.5" fill="#38bdf8" filter="url(#glow)"/>
         <defs>
@@ -713,7 +556,7 @@
       renderClock(h, m, s, ampm);
     }
 
-    document.addEventListener("DOMContentLoaded", function () {
+    document.addEventListener("DOMContentLoaded", function() {
       updateClock();
       setInterval(updateClock, 1000);
     });
