--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,8 +64,9 @@
       z-index: 1000;
       background: #111827;
       border-radius: 10px;
-      padding: 0.3em 0.7em;
-      width: 350px;
+      padding: 0.5em 0.4em;
+      width: 280px;
+      height: 80px;
       overflow: hidden;
       display: flex;
       align-items: center;
@@ -73,7 +74,7 @@
       border: 2px solid #38bdf8;
       box-shadow: 0 0 16px #38bdf888, 0 0 4px #2563eb;
       white-space: nowrap;
-      gap: 0.15em;
+      gap: 0.1em;
     }
 
     .grid {
@@ -375,7 +376,7 @@
     .digit-bg {
       background: #222;
       border-radius: 6px;
-      margin: 0 2px;
+      margin: 0 1px;
       display: inline-block;
       box-shadow: 0 0 8px #222;
     }
@@ -386,10 +387,10 @@
 
     .ampm {
       display: inline-block;
-      width: 2.5em;
+      width: 2em;
       text-align: left;
       font-size: 0.9em;
-      margin-left: 0.4em;
+      margin-left: 0.3em;
       color: #60a5fa;
       letter-spacing: 0.2em;
       vertical-align: middle;
