--- a/frontend/index.html
+++ b/frontend/index.html
@@ -318,51 +318,6 @@
       vertical-align: middle;
     }
 
-    .seg {
-      fill: #222;
-      transition: fill 0.2s;
-    }
-
-    .seg-a {
-      y: 2;
-    }
-
-    .seg-b {
-      x: 32;
-      y: 8;
-      width: 6;
-      height: 24;
-    }
-
-    .seg-c {
-      x: 32;
-      y: 38;
-      width: 6;
-      height: 24;
-    }
-
-    .seg-d {
-      y: 62;
-    }
-
-    .seg-e {
-      x: 2;
-      y: 38;
-      width: 6;
-      height: 24;
-    }
-
-    .seg-f {
-      x: 2;
-      y: 8;
-      width: 6;
-      height: 24;
-    }
-
-    .seg-g {
-      y: 34;
-    }
-
     .seven-segment .seg {
       fill: #222;
       transition: fill 0.2s;
@@ -449,6 +404,10 @@
       "8": ["a", "b", "c", "d", "e", "f", "g"],
       "9": ["a", "b", "c", "d", "f", "g"]
     };
+
+    // Add these missing declarations:
+    let ads = [];
+    let nextAdTimeout = null;
 
     function loadFaculty() {
       fetch("https://faculty-status-backend.onrender.com/api/faculty", {
