--- a/frontend/index.html
+++ b/frontend/index.html
@@ -65,7 +65,7 @@
       background: #111827;
       border-radius: 10px;
       padding: 0.5em 0.4em;
-      width: 350px;
+      width: 280px;
       height: 80px;
       overflow: hidden;
       display: flex;
@@ -102,7 +102,7 @@
       overflow: hidden;
       word-break: break-word;
       box-sizing: border-box;
-      padding: 0.5vh 0vw;
+      padding: 1.2vh 0.5vh;
       /* Increased vertical padding */
     }
 
