--- a/frontend/index.html
+++ b/frontend/index.html
@@ -102,7 +102,7 @@
       overflow: hidden;
       word-break: break-word;
       box-sizing: border-box;
-      padding: 1.2vh 0.5vh;
+      padding: 0.5vh 0vw;
       /* Increased vertical padding */
     }
 
